--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body{
     border: 1px solid rgba(255,255, 255, 0.3);
     max-width: 90%;
     backdrop-filter: blur(100%);
+    min-width: 4vh;
 }
 
 .container h2{
